--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ streamlit==1.46.1
 torch==2.7.1
 transformers==4.53.0
 uvicorn==0.35.0
+google_auth_oauthlib==1.2.2
 
 # This is a requirements file for a Python project that uses various libraries.
 # It includes libraries for web development, data processing, machine learning, and more.
